[gd_scene load_steps=2 format=3 uid="uid://fj02x2n6qu61"]

[ext_resource type="Script" uid="uid://cde334dmpp5gr" path="res://scripts/battle/BattleControls.gd" id="1_2hdqz"]

[node name="BattleControls" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 100.0
script = ExtResource("1_2hdqz")

[node name="ControlPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 90.0

[node name="SpeedLabel" type="Label" parent="ControlPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 30.0
text = "速度: 1.0x"

[node name="SpeedSlider" type="HSlider" parent="ControlPanel"]
layout_mode = 0
offset_left = 100.0
offset_top = 10.0
offset_right = 280.0
offset_bottom = 30.0
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="PauseButton" type="Button" parent="ControlPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 70.0
offset_bottom = 70.0
text = "暂停"

[node name="AutoButton" type="Button" parent="ControlPanel"]
layout_mode = 0
offset_left = 80.0
offset_top = 40.0
offset_right = 140.0
offset_bottom = 70.0
text = "自动"

[node name="SkipButton" type="Button" parent="ControlPanel"]
layout_mode = 0
offset_left = 150.0
offset_top = 40.0
offset_right = 210.0
offset_bottom = 70.0
text = "跳过"

[node name="ExitButton" type="Button" parent="ControlPanel"]
layout_mode = 0
offset_left = 220.0
offset_top = 40.0
offset_right = 280.0
offset_bottom = 70.0
text = "退出"
